refactor: docker image light weight